# aidos3

./: CMakeLists.txt  README.md  apt_installer.sh  windows_install.bat  windows_install.ps1
.github/workflows/: cmake-multi-platform.yml
src/bootloader/stage2/: CMakeLists.txt  string.cpp
src/bootloader/stage2/memory/: memory.cpp  paging.h
